--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>HackOverflow 1.0</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../src/assets/img/hack-overflow-logo.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
