added key event date cards

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../src/assets/img/hack-overflow-logo.png"
+      href="../public/hack-overflow-logo.ico"
     />
   </head>
   <body>
