--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script
-      src="https://apply.devfolio.co/v2/sdk.js"
-      async=""
-      defer=""
-    ></script>
+    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   </body>
 </html>
