updated meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Join the ultimate coding challenge! Our hackathon brings together the brightest minds in tech to collaborate and innovate over 36 hours. From coding novices to seasoned programmers, everyone is welcome. Register now and take on the challenge to build something great!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
