--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-91GX1RY9VH"
+      src="https://www.googletagmanager.com/gtag/js?id=G-E7J5RT1GHR"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,7 +12,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-91GX1RY9VH");
+      gtag("config", "G-E7J5RT1GHR");
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
