Added globe module to the website

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="//unpkg.com/d3"></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -33,6 +34,7 @@
       rel="stylesheet"
       href="node_modules/dracula-ui/styles/dracula-ui.css"
     />
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
