--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       name="description"
       content="Join the ultimate coding challenge! Our hackathon brings together the brightest minds in tech to collaborate and innovate over 36 hours. From coding novices to seasoned programmers, everyone is welcome. Register now and take on the challenge to build something great!"
     />
+    <meta
+      name="keywords"
+      content="HackOverflow 2.0, National Hackathon, PHCET, Computer Engineering, Innovate, Code, Transform, Schedule, Themes, Sponsors, About, Brochure, Hosted by PHCET, Hackathon, Prize Pool, Registrations, Teams, Companies, SDGs, No Poverty, Zero Hunger, Good Health, Quality Education, Gender Equality, Clean Water and Sanitation, Decent Work, Industry & Infrastructure, Reduced Inequalities, Sustainable Cities, Consumption & Production, Climate Action, Partnerships, Life Below Water, Life on Land, Peace & Justice, Affordable & Clean Energy, Sponsorship, Platinum Sponsor, Gold Sponsor, General Sponsor, FAQ, Team Size, Hackathon Duration, Perks for Participants, Transport Facilities, Accommodation, Offline Track Registration, PHCET, Pillai HOC College of Engineering and Technology, Technology, Innovation, Learning Environment, Campus Amenities, Faculty, TomTom, Glimpses, Follow us, © 2024 HackOverflow 2.0"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -34,7 +38,7 @@
       rel="stylesheet"
       href="node_modules/dracula-ui/styles/dracula-ui.css"
     />
-    
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -64,7 +68,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
+
     <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   </body>
 </html>
