--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Join the ultimate coding challenge! Our hackathon brings together the brightest minds in tech to collaborate and innovate over 36 hours. From coding novices to seasoned programmers, everyone is welcome. Register now and take on the challenge to build something great!"
+      content="HackOverflow 2.0, a prestigious 3-day long National Level Hackathon proudly presented by the Department of Computer Engineering at Pillai HOC College of Engineering and Technology. This Hackathon will be conducted from 14th-16th March in offline mode with separate winners and prizes/swags. The offline mode will take place on the 14-acre PHCET campus, providing participants with Food, Accommodation, Placement Opportunity, and Goodies for all participants. Get all details related to HackOverflow 2.0 for all the process in our Hackathon's Brochure."
     />
     <meta
       name="keywords"
-      content="HackOverflow 2.0, National Hackathon, PHCET, Computer Engineering, Innovate, Code, Transform, Schedule, Themes, Sponsors, About, Brochure, Hosted by PHCET, Hackathon, Prize Pool, Registrations, Teams, Companies, SDGs, No Poverty, Zero Hunger, Good Health, Quality Education, Gender Equality, Clean Water and Sanitation, Decent Work, Industry & Infrastructure, Reduced Inequalities, Sustainable Cities, Consumption & Production, Climate Action, Partnerships, Life Below Water, Life on Land, Peace & Justice, Affordable & Clean Energy, Sponsorship, Platinum Sponsor, Gold Sponsor, General Sponsor, FAQ, Team Size, Hackathon Duration, Perks for Participants, Transport Facilities, Accommodation, Offline Track Registration, PHCET, Pillai HOC College of Engineering and Technology, Technology, Innovation, Learning Environment, Campus Amenities, Faculty, TomTom, Glimpses, Follow us, © 2024 HackOverflow 2.0"
+      content="hackoverflow, hackoverflow 2.0, hack overflow, hack overflow 2.0, HackOverflow 2.0, National Hackathon, PHCET, Computer Engineering, Innovate, Code, Transform, Schedule, Themes, Sponsors, About, Brochure, Hosted by PHCET, Hackathon, Prize Pool, Registrations, Teams, Companies, SDGs, No Poverty, Zero Hunger, Good Health, Quality Education, Gender Equality, Clean Water and Sanitation, Decent Work, Industry & Infrastructure, Reduced Inequalities, Sustainable Cities, Consumption & Production, Climate Action, Partnerships, Life Below Water, Life on Land, Peace & Justice, Affordable & Clean Energy, Sponsorship, Platinum Sponsor, Gold Sponsor, General Sponsor, FAQ, Team Size, Hackathon Duration, Perks for Participants, Transport Facilities, Accommodation, Offline Track Registration, PHCET, Pillai HOC College of Engineering and Technology, Technology, Innovation, Learning Environment, Campus Amenities, Faculty, TomTom, Glimpses, Follow us, © 2024 HackOverflow 2.0"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -48,7 +48,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HackOverflow 2.0</title>
+    <title>HackOverflow 2.0 | 3-Day Long National Level Hackathon</title>
     <link
       rel="icon"
       type="image/x-icon"
