--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       gtag("config", "G-91GX1RY9VH");
     </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/3.0 logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
